##Text encoding: utf-8

2007-04-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add new directories.
	* configure.ac: ditto.
	* goffice/Makefile.am: initial work on the goffice plugin.
	* goffice/gchemutils-priv.h: ditto.
	* goffice/gchemutils.cc: ditto.
	* goffice/gchemutils.h: ditto.
	* goffice/plugin.xml.in: ditto.
	* programs/paint/Makefile.am: enhanced build.

2007-04-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* templates/Makefile.am: new subtree.
	* templates/paint/Makefile.am: copied from GChemPaint.
	* templates/paint/templates.xml.in: ditto.

2007-04-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: removed some old tests (gcc < 0.3 not
	anymore supported).
	* libs/canvas/gnome-print-pango.c: fixed build issues.
	[#19523]
	* libs/gcp/about.cc: ditto.
	* libs/gcp/about.h: ditto.
	* libs/gcp/application.cc: ditto.
	* libs/gcp/application.h: ditto.
	* libs/gcp/arrow.cc: ditto.
	* libs/gcp/atom.cc: ditto.
	* libs/gcp/bond.cc: ditto.
	* libs/gcp/document.cc: ditto.
	* libs/gcp/document.h: ditto.
	* libs/gcp/electron.cc: ditto.
	* libs/gcp/fontsel.cc: ditto.
	* libs/gcp/fragment-atom.cc: ditto.
	* libs/gcp/fragment.cc: ditto.
	* libs/gcp/mesomery.cc: ditto.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcp/operation.cc: ditto.
	* libs/gcp/operation.h: ditto.
	* libs/gcp/reaction-arrow.cc: ditto.
	* libs/gcp/reaction-operator.cc: ditto.
	* libs/gcp/reaction.cc: ditto.
	* libs/gcp/settings.cc: ditto.
	* libs/gcp/settings.h: ditto.
	* libs/gcp/text.cc: ditto.
	* libs/gcp/theme.cc: ditto.
	* libs/gcp/view.cc: ditto.
	* libs/gcp/window.cc: ditto.
	* libs/gcu/application.cc: ditto.
	* libs/gcu/application.h: ditto.
	* libs/gcu/atom.cc: ditto.
	* libs/gcu/bond.cc: ditto.
	* libs/gcu/chem3ddoc.cc: ditto.
	* libs/gcu/chemistry.cc: ditto.
	* libs/gcu/chemistry.h: ditto.
	* libs/gcu/crystalatom.cc: ditto.
	* libs/gcu/crystalbond.cc: ditto.
	* libs/gcu/crystalcleavage.cc: ditto.
	* libs/gcu/crystaldoc.cc: ditto.